[package]
description = "Command line tool to control NextWM"
name = "nextctl-rs"
version = "0.1.0-dev"
edition = "2021"
authors = [ "Shinyzenith <aakashsensharma@gmail.com>", ]

[build-dependencies]
wayland-scanner = "0.29.5"

[dependencies]
wayland-client = "0.30.2"
wayland-commons = "0.29.5"

[[bin]]
name = "nextctl"
path = "src/main.rs"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
